2005-02-18  Francois Dumont  <dums@stlport...>

	* stlport/stl/_hashtable.h, _unordered_set.h, _unordered_map.h: Code review
	based on the 12 April 2004 Technical Report document. Add missing hash policy
	and bucket_size methods. Fix of the rehash method behavior. erase method
	bug fix.

2005-02-14  Francois Dumont  <dums@stlport...>

	* stlport/string, /stl/_string.h: Modification of the include schema.
	_string_io.h no more included from _string.h to avoid circular headers
	dependencies as basic_string class is used in iostream implementation.
	This headers is now included from the Standard string header. Useless 
	cctype include removed from _string.h. _string_hash.h also moved from
	_string.h to string for consistency.

	* stlport/stl/_complex.c: Add of the _string_io.h header include that
	was missing after string include schema modification.

	* stlport/stl/_string_base.h, _string.h: basic_string move traits STLport
	struct definition do not depends anymore on the _String_base struct to
	make definition more clear.

2005-02-08  Francois Dumont  <dums@stlport...>

	* stlport/stl/_config.h: Fix endianness for AMD 64 thanks Karol
	Szkudlarek.

2005-02-07  Boris Fomitchev  <boris@stlport...>
	* stlport/stl/_config_compat_post.h, stlport/stl/_relops_hash_cont.h 
	  stlport/stl/_list.h, stlport/stl/_slist.h, stlport/stl/_map.h, 
	  stlport/stl/_set.h
	  4.6 compatibility fix

2005-02-04  Francois Dumont  <dums@stlport...>

	* stlport/stl/_alloc.c: Fix of the _S_refill method in the lock free 
	implementation thanks Felix Wyss.

	* stlport/stl/_hashtable.h: _M_get_elem_ite set as static when possible
	to fix a MSVC6 problem thanks Michael Fink report.

	* stlport/new, config/stl_evc.h: EVC patch for MFC support from Michael Fink.

	* build/Makefiles/nmake/evc3.mak, evc4.mak: Warning level raised to 4
	by Michael Fink.

	* doc/README.evc3, README.evc4 doc update from Michael Fink.

	* src/vc_warning_disable.h: Add warning 4201 and 4214 disabling for EVC.
