@@ -218,14 +218,41 @@ Operational environment:        Windows 2000 SP4
 =======================================================================
 
 -----------------------------------------------------------------------
-Compiler:                       Visual C++ .Net 2003 (7.1)
+Compiler:                       Visual C++ .Net 2002 (7.0)
 -----------------------------------------------------------------------
-Date:                           2004-10-24
+Date:                           2005-02-19
 STLP Version:                   current CVS STLPORT_5_0 branch
 Reporter:                       dums (Francois Dumont)
-Status (release-shared):        All pass (298 tests)
-Notes:                          
-Status (stldbg-shared):         All pass (298 tests)
+Status (release-shared):        All pass (315 tests)
+Notes:
+Status (dbg-shared):            All pass (315 tests)
+Notes:
+Status (stldbg-shared):         All pass (315 tests)
+Notes:
+Status (release-static):        All pass (315 tests)
+Notes:
+Status (dbg-static):            All pass (315 tests)
+Notes:
+Status (stldbg-static):         All pass (315 tests)
+Notes:
+
+-----------------------------------------------------------------------
+Compiler:                       Visual C++ .Net 2003 (7.1)
+-----------------------------------------------------------------------
+Date:                           2005-02-19
+STLP Version:                   current CVS STLPORT_5_0 branch
+Reporter:                       dums (Francois Dumont)
+Status (release-shared):        All pass (316 tests)
+Notes:
+Status (dbg-shared):            All pass (316 tests)
+Notes:
+Status (stldbg-shared):         All pass (316 tests)
+Notes:
+Status (release-static):        All pass (316 tests)
+Notes:
+Status (dbg-static):            All pass (316 tests)
+Notes:
+Status (stldbg-static):         All pass (316 tests)
 Notes:
 
 =======================================================================
