@@ -5,17 +5,20 @@
 #  pragma warning( disable : 4610 ) // struct '...' can never be instantiated - user defined constructor required
 #endif
 
-#if (_MSC_VER <= 1310)
+#if (_MSC_VER <= 1200)
 #  pragma warning( disable : 4097 ) // typedef-name used as based class of (...)
 #  pragma warning( disable : 4251 ) // DLL interface needed
 #  pragma warning( disable : 4284 ) // for -> operator
 #  pragma warning( disable : 4503 ) // decorated name length exceeded, name was truncated
-#  pragma warning( disable : 4511 ) // copy constructor cannot be generated
 #  pragma warning( disable : 4514 ) // unreferenced inline function has been removed
 #  pragma warning( disable : 4660 ) // template-class specialization '...' is already instantiated
 #  pragma warning( disable : 4701 ) // local variable 'base' may be used without having been initialized
 #  pragma warning( disable : 4710 ) // function (...) not inlined
 #  pragma warning( disable : 4786 ) // identifier truncated to 255 characters
+#endif
+
+#if (_MSC_VER <= 1310)
+#  pragma warning( disable : 4511 ) // copy constructor cannot be generated
 #endif
 
 #if (_MSC_VER < 1300) && defined(UNDER_CE)
@@ -28,10 +31,10 @@
 #pragma warning( disable : 4100 ) // unreferenced formal parameter
 #pragma warning( disable : 4127 ) // conditional expression is constant
 #pragma warning( disable : 4146 ) // unary minus applied to unsigned type
+#pragma warning( disable : 4245 ) // conversion from 'enum ' to 'unsigned int', signed/unsigned mismatch
 //This warning is due to the fact that Windows supports 64 bits file size (files
 //higher than 4Go but STLport do not support it yet.
 #pragma warning( disable : 4244 ) // implicit conversion: possible loss of data
-#pragma warning( disable : 4245 ) // conversion from 'enum ' to 'unsigned int', signed/unsigned mismatch
 #pragma warning( disable : 4512 ) // assignment operator could not be generated
 #pragma warning( disable : 4571 ) // catch(...) blocks compiled with /EHs do not catch or re-throw Structured Exceptions
 #pragma warning( disable : 4702 ) // unreachable code (appears in release with warning level4)
